rm: EduType from User
